made fixed header bigger on mobile

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -72,6 +72,11 @@
             height: 30px;
             margin-top: 10px;
             margin-bottom: 10px;
+
+            @media (max-width: $large-phone-sizing){
+                margin-top: 14px;
+                margin-bottom: 14px;
+            }
         }
     }
 }
